app/error.txt

SyntaxError: D:\OtherProject\mine\screen_inu\app\e2e\playwright\app.spec.ts: Unexpected token (9:0)

   7 |
   8 | test.beforeAll(async () => {
>  9 | <<<<<<< HEAD
     | ^
  10 |     console.log('Connecting to Tauri app via CDP...');
  11 |     // Retry connection logic (essential for CI/CD reliability)
  12 |     // CI machines can be slow to compile/launch the app

   at app.spec.ts:9

   7 |
   8 | test.beforeAll(async () => {
>  9 | <<<<<<< HEAD
  10 |     console.log('Connecting to Tauri app via CDP...');
  11 |     // Retry connection logic (essential for CI/CD reliability)
  12 |     // CI machines can be slow to compile/launch the app
